--- a/css/about.css
+++ b/css/about.css
@@ -182,12 +182,12 @@ body {
   overflow: hidden;
 }
 
-.background-image {
-  background-image: url("https://images.unsplash.com/flagged/photo-1563536310477-c7b4e3a800c2?q=80&w=387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+.background-image img{
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-position: center;
+  /* background-size: cover;
+  background-position: center; */
+  object-fit: cover;
 }
 
 .content {
@@ -208,6 +208,7 @@ body {
 .content p {
   margin-bottom: 0;
 }
+
 
 /* contact section */
 .contact-text {
