--- a/css/styleVariables.css
+++ b/css/styleVariables.css
@@ -36,7 +36,7 @@
   --tw-prose-invert-th-borders: #4b5563;
   --tw-prose-invert-td-borders: #374151;
 
-  /* background colors */
+  /* colors */
   --background-blue: hsl(200, 100%, 50%);
   --background-black: hsl(221, 41%, 7%);
   --background-White: white;
