--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,35 @@
   This code sets the padding of the body element to 120px on the left and right sides.
   This is a fairly large padding, which will make the content of the page quite narrow.
 */
-body {
-  padding: 0 120px;
-  box-sizing: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  overflow-x: hidden;
+body{
+  scroll-behavior: smooth;
+}
+
+
+
+#main {
+  max-width: 90%;
+   margin: 0 auto;
+  overflow-x: hidden; 
+}
+
+
+@media screen and (max-width:900px) {
+  #main {
+    max-width: 100%;
+     margin: 0 20px;
+  }
 }
 
 .toggle{
-  position: absolute;
-  right: 50px;
-
+  margin: 20px;
+  display: flex;
+  margin-right: 0px;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
+
+
 
 
 /* 
@@ -20,7 +38,7 @@ body {
   In this case, we reduce the padding to 10px, which will make the content wider again.
   This is useful for smaller screens, such as mobile devices, where the user may not have as much space to view the content.
 */
-@media screen and (max-width: 1100px) {
+/* @media screen and (max-width: 1100px) {
   body {
     padding: 0 10px;
   }
@@ -28,7 +46,7 @@ body {
 
 main {
   margin: 0 auto;
-}
+} */
 
 /* container for the welcome page */
 .welcomePage {
@@ -108,9 +126,11 @@ main {
 }
 
 .video-container h2 {
-  width: 600px;
+  width: 800px;
   font-size: 30px;
+  text-transform: uppercase;
   margin: 15px 0;
+  color: var(--background-orange);
 }
 
 .video-container video {
@@ -176,12 +196,10 @@ main {
 
 /* projects  container */
 .projects-info {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin: 200px auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 1.5rem;
-  margin-top: 3px;
-  margin-bottom: 60px;
 }
 
 #projects {
@@ -218,6 +236,9 @@ main {
 .info img {
   display: block;
   width: 100%;
+  margin-top: 10px;
+  filter: blur(2px);
+  cursor: pointer;
 }
 
 .info h2 {
@@ -226,17 +247,24 @@ main {
   text-transform: uppercase;
 }
 .info {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 400px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 1rem;
-  text-align: center;
-  display: grid;
-  grid-template-rows: subgrid;
-  grid-row: 1/4;
+  padding: 2rem;
 }
 @media screen and (max-width: 1000px) {
-  .info {
-    display: block;
+  .projects-info{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  .info{
+    width: 500px;
+    
   }
 }
 
@@ -429,9 +457,10 @@ main {
   padding: 1.5rem;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 800px) {
   .course .card {
-    margin: 7px;
+    /* margin: 2px; */
+    width: 450px;
   }
 }
 
@@ -557,3 +586,5 @@ main {
 .list {
   position: relative;
 } */
+
+
