--- a/css/video.css
+++ b/css/video.css
@@ -1,61 +1,80 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-.my-nav {
-  overflow: hidden;
-  background-color: #333;
+
+body{
+   overflow-x: hidden;
 }
 
-.my-nav a {
-  float: left;
-  color: #f2f2f2;
+
+.toggle{
+  margin: 20px;
+  display: flex;
+  margin-right: 0px;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+:root{
+  --color: hsl(221, 14%, 71%);
+}
+main{
+  max-width: 100%;
+  margin: 0 ;
+  padding: 0 400px;
+  overflow-x: hidden;
+  display: grid;
+  place-content: center;
+}
+
+header{
+  background-color: var(--background-orange);
+  margin: 0 10px;
+}
+header h1{
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+  color: var(--color);
 }
-
-.my-nav a:hover {
-  background-color: #ddd;
-  color: black;
+@media screen and (max-width:1300px) {
+  main{
+    padding: 10px 20px;
+    margin: 20px 0;
+  }
+  
 }
-
-.my-nav a.active {
-  background-color: #020605;
-  color: white;
-}
-
-.mapContainer {
-  display: inline-block;
+.video-card {
+  width: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(73, 98, 98);
+  flex-wrap: wrap;
+  gap: 20px;
+  border-radius: 20px;
+  border: 2px solid var(--background-orange);
+  margin: 30px 0;
+  padding: 10px 0;
+}
+.video {
+  position: relative;
+  width: 300px;
+  height: 300px; 
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #f9f9f9;
+  color: black;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+}
+.video video {
   width: 100%;
   height: auto;
+  border-radius: 8px;
 }
-iframe {
-  margin-left: 25%;
-}
-h1 {
+.video span {
+  display: block;
   font-weight: bold;
-  text-align: center;
+  font-size: 16px;
 }
-hr {
-  margin: 10px;
-}
-.contact {
-  background-color: rgb(228, 215, 215);
-  margin: 15px;
-  padding: 10px;
-  letter-spacing: 0ic;
-  font-size: large;
-}
-footer {
-  text-align: center;
-  margin: 15px;
-  font-size: larger;
-  background-color: grey;
-  padding: 20px;
+.video p {
+  margin: 10px 0 0 0;
+  font-size: 14px;
 }
