--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body{
   margin: 20px;
   display: flex;
   margin-right: 0px;
+  margin-bottom:0 ;
   justify-content: flex-end;
   align-items: flex-end;
 }
@@ -54,18 +55,21 @@ main {
   width: 100%; /* make it as wide as the parent */
   max-width: 100%; /* make it as wide as the parent */
   min-height: 200px; /* make it at least 200px high */
-  margin: 40px auto;
+  margin: 0px auto;
   padding: 0;
 }
 
 /* left side of the welcome page */
 .left-welcome {
-  background: url("/images/developers.jpg") no-repeat; /* set the background image */
-  background-position: center; /* center the background image */
+  background: url("/images/Programming-bro.svg") no-repeat; /* set the background image */
+  background-position: left; /* center the background image */
   background-size: cover; /* make the background image as big as the container */
+  object-fit: cover;
   flex: 1; /* make the left side take up half of the space */
   float: left; /* float it to the left */
-  height: 300px;
+  min-height: 560px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* right side of the welcome page */
@@ -386,8 +390,8 @@ main {
   position: relative;
   background-color: var(--background-black);
   text-align: center;
-  margin: 40px 0;
-  padding: 50px 0;
+  margin: 0;
+  padding: 40px 0;
 }
 
 /* .header-text::before {
@@ -521,70 +525,21 @@ main {
   border-radius: 0.25rem;
   background-color: rgba(167, 139, 250, 1);
   padding: 1rem 0.75rem;
-  text-align: center;
   font-weight: 600;
-  letter-spacing: 0.05em;
   color: rgba(17, 24, 39, 1);
+  font-size: 0.875rem;
+  text-align: center;
+  letter-spacing: 0.05em;
   cursor: pointer;
+  transition: background-color 0.5s;
 }
 
-/* .card-container {
-  display: flex;
-  place-content: center;
-  flex-wrap: wrap;
-  margin: 100px 0;
-}
-.card {
-  width: 300px;
-  height: 400px;
-  background-color: #07182e;
-  position: relative;
-  display: flex;
-  place-content: center;
-  align-items: center;
-  overflow: hidden;
-  border-radius: 20px;
-  margin: 10px;
-  transition: hover 0.6s;
+.action a {
+  text-decoration: none;
+  font-size: inherit;
+  color: inherit;
 }
 
-.card h2 {
-  z-index: 1;
-  color: var(--background-White);
-  font-size: 2em;
+.action:hover {
+  background-color: rgba(167, 139, 250, .7);
 }
-
-.card:hover::before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  background-image: linear-gradient(
-    180deg,
-    rgb(0, 183, 255),
-    rgb(255, 48, 255)
-  );
-  height: 230%;
-  animation: rotation 7s linear infinite;
-  transition: all 0.2s linear;
-}
-
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.card::after {
-  content: "";
-  position: absolute;
-  background: #07182e;
-  inset: 5px;
-  border-radius: 15px;
-}
-.list {
-  position: relative;
-} */
-
-
