--- a/css/video.css
+++ b/css/video.css
@@ -1,42 +1,39 @@
-
-body{
-   overflow-x: hidden;
+body {
+  overflow-x: hidden;
 }
 
-
-.toggle{
+.toggle {
   margin: 20px;
   display: flex;
   margin-right: 0px;
   justify-content: flex-end;
   align-items: flex-end;
 }
-:root{
+:root {
   --color: hsl(221, 14%, 71%);
 }
-main{
+main {
   max-width: 100%;
-  margin: 0 ;
+  margin: 0;
   padding: 0 400px;
   overflow-x: hidden;
   display: grid;
   place-content: center;
 }
 
-header{
+header {
   background-color: var(--background-orange);
   margin: 0 10px;
 }
-header h1{
+header h1 {
   text-align: center;
   color: var(--color);
 }
-@media screen and (max-width:1300px) {
-  main{
+@media screen and (max-width: 1300px) {
+  main {
     padding: 10px 20px;
     margin: 20px 0;
   }
-  
 }
 .video-card {
   width: 100%;
@@ -53,7 +50,7 @@ header h1{
 .video {
   position: relative;
   width: 300px;
-  height: 300px; 
+  height: 300px;
   border: 1px solid #ccc;
   border-radius: 8px;
   overflow: hidden;
@@ -62,9 +59,9 @@ header h1{
   padding: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
-.video video {
+.video iframe {
   width: 100%;
   height: auto;
   border-radius: 8px;
