--- a/css/about.css
+++ b/css/about.css
@@ -4,9 +4,7 @@ body {
   scroll-behavior: smooth;
 }
 
-
-
-.toggle{
+.toggle {
   margin: 20px;
   display: flex;
   margin-right: 0px;
@@ -193,7 +191,7 @@ body {
   overflow: hidden;
 }
 
-.background-image img{
+.background-image img {
   width: 100%;
   height: 100%;
   /* background-size: cover;
@@ -219,7 +217,6 @@ body {
 .content p {
   margin-bottom: 0;
 }
-
 
 /* contact section */
 .contact-text {
@@ -662,7 +659,7 @@ article p {
   }
 }
 
-#hidden {
+/* #hidden {
   opacity: 0;
   transform: translate(0, 10vh);
   transition: all 1s;
@@ -671,4 +668,4 @@ article p {
 #hidden.visible {
   opacity: 1;
   transform: translate(0, 0);
-}
+} */
