--- a/css/codeStyles.css
+++ b/css/codeStyles.css
@@ -1,10 +1,5 @@
-/* *,
-:after,
-:before {
-  border: 0 solid #e5e7eb;
-  box-sizing: border-box;
-} */
 
+/* toggle space between button  */
 .toggle{
   margin-top: 30px;
   margin-bottom: 0;
@@ -14,7 +9,7 @@
 }
 
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:300px) {
   .toggle{
     position: sticky;
     z-index: 1;
@@ -52,17 +47,7 @@
   clear: both;
 }
 
-/* responsive */
-/* .toggle {
-  display: flex;
-  margin-right: 0;
-  justify-content: end;
-} */
-/* 
-.btn-container{
-  width: 100%;
-  margin-bottom: 90px;
-} */
+/* media queries for responsiveness */
 @media screen and (max-width: 900px) {
   .leftCard,
   .rightCard {
