--- a/css/nav.css
+++ b/css/nav.css
@@ -17,6 +17,7 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 /* nav igation styles*/
 
@@ -38,10 +39,6 @@ body {
   font-weight: 600;
   transition: all 0.7s;
 }
-
-/* #active {
-  color: white;
-} */
 
 .top-nav .icon {
   display: none;
@@ -92,6 +89,7 @@ body {
   display: block;
 }
 
+/* responsive nav styles */
 @media screen and (max-width: 600px) {
   .top-nav a:not(:first-child),
   .dropdown .drop-btn {
