--- a/css/nav.css
+++ b/css/nav.css
@@ -200,7 +200,9 @@ footer {
   color: white;
   transition: all 0.5s ease;
 }
-.social-links a:hover {
+
+
+.social-links, .social-media  a:hover {
   color: black;
   background-color: white;
 }
